# syslog-ng

./: .astylerc  .cirrus.yml  .ctags  .editorconfig  .gitattributes  .gitconfig  .gitignore  .gitmodules  .lcovrc  .lgtm.yml  .mailmap  .travis.yml  .vscode  APKBUILD  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  COPYING  ChangeLog  ChangeLog.1  Dockerfile  Doxyfile  GPL.txt  INSTALL  ISSUE_TEMPLATE.md  Makefile.am  NEWS  NEWS-4.0.md  NEWS.md  README  README.md  VERSION  Vagrantfile  aclocal.m4  alpine.dockerfile  autogen.sh  balabit-vs-build  configure.ac  configure.in  dev-requirements.txt  (+26 more)
Mk/: Makefile.am  lex-rules.am  populate-makefiles.sh  python-venv.am  subdir.mk
cmake/: BISON_GEN.cmake  Makefile.am  add_module.cmake  add_tests.cmake  common_helpers.cmake  detect_features.cmake  enable_caps.cmake  enable_cpp.cmake  enable_env_wrap.cmake  enable_objc.cmake  enable_perf.cmake  enable_server_mode.cmake  enable_spoof_source.cmake  enable_stackdump.cmake  enable_systemd.cmake  enable_wrap.cmake  external_or_find_package.cmake  find_bison.cmake  find_gettext.cmake  find_glib.cmake  find_inotify.cmake  find_ivykis.cmake  find_python.cmake  find_python_and_build_venv.cmake  init_submodules.cmake  module_switch.cmake  openssl_functions.cmake  platform_options.cmake  print_config_summary.cmake  python_build_venv.cmake  python_functions.cmake  set_compile_options.cmake  set_debug_options.cmake  set_diagnostic_options.cmake  set_testing.cmake  syslog_ng_core_java_native.cmake
cmake/Modules/: CheckCreds.cmake  CheckIPv6.cmake  CheckSockaddrStorage.cmake  CheckStructMember.cmake  CheckTCP.cmake  EnableIPv6.cmake  ExternalIVYKIS.cmake  ExternalJSONC.cmake  ExternalRabbitMQ.cmake  FindCurl.cmake  FindESMTP.cmake  FindEventlog.cmake  FindFLEX.cmake  FindGLIB.cmake  FindGettext.cmake  FindGperf.cmake  FindGradle.cmake  FindHiredis.cmake  FindIVYKIS.cmake  FindInotify.cmake  FindIvykis.cmake  FindJSONC.cmake  FindJsonC.cmake  FindWrap.cmake  (+23 more)
contrib/: Brewfile  Makefile.am  README  README.syslog-debun  README.syslog-ng-debun  com.syslog-ng.syslog-ng.plist  get-github-actions-status.py  init.d.HP-UX  init.d.RedHat  init.d.SuSE  init.d.SunOS  init.d.solaris  relogger.pl  syslog-debun  syslog-mc  syslog-ng-debun  syslog-ng-entitlements.plist  syslog-ng.conf.RedHat  syslog-ng.conf.SunOS  syslog-ng.conf.doc  syslog-ng.vim  syslog2ng
dbld/: .dockerignore  Jenkinsfile  Makefile.am  README.md  bootstrap  build.manifest  builddeps  deb  distcheck  functions.sh  generate-debian-directory  generate-rpm-specfile  make  make-check  package  packages.manifest  pip_packages.manifest  pkg-tarball  prepare-image-build  prepare-release  rpm  rules  shell  tarball  tarball-changes.ignore  validate-release-version
doc/: CMakeLists.txt  ChangeLog.0  ChangeLog.1  ChangeLog.2  Makefile.am  doc-3301.md  docvars.xml.in
lib/: .gitignore  CMakeLists.txt  Makefile.am  ack-type.h  ack_tracker.c  ack_tracker.h  afinter.c  afinter.h  alarms.c  alarms.h  apphook.c  apphook.h  atomic-gssize.h  atomic.h  block-ref-grammar.ym  block-ref-parser.c  block-ref-parser.h  bookmark.h  cache.c  cache.h  center.c  center.h  cfg-args.c  cfg-args.h  cfg-block-generator.c  cfg-block-generator.h  cfg-block.c  cfg-block.h  cfg-grammar-internal.c  cfg-grammar-internal.h  cfg-grammar.y  cfg-helpers.c  cfg-helpers.h  cfg-lex.l  cfg-lexer-subst.c  cfg-lexer-subst.h  cfg-lexer.c  cfg-lexer.h  cfg-monitor.c  cfg-monitor.h  (+310 more)
libtest/: CMakeLists.txt  Makefile.am  capability_lib.c  capability_lib.h  config_parse_lib.c  config_parse_lib.h  cr_template.c  cr_template.h  fake-time.c  fake-time.h  filterx-lib.c  filterx-lib.h  filterx.c  filterx.h  grab-logging.c  grab-logging.h  libtest.c  libtest_memreader.c  libtest_memreader.h  license_module_mock.c  license_module_mock.h  mock-cfg-parser.c  mock-cfg-parser.h  mock-logpipe.c  mock-logpipe.h  mock-transport.c  mock-transport.h  msg_parse_lib.c  msg_parse_lib.h  persist_lib.c  persist_lib.h  proto_lib.c  proto_lib.h  queue_utils_lib.c  queue_utils_lib.h  stopwatch.c  stopwatch.h  syslog-ng-test.pc.in  template_lib.c  template_lib.h  (+3 more)
modules/: CMakeLists.txt  Makefile.am
persist-tool/: CMakeLists.txt  Makefile.am  add.c  add.h  dump.c  dump.h  generate-agent.c  generate-agent.h  generate-common.c  generate-common.h  generate.c  generate.h  json-presented-persistable-state.c  json-presented-persistable-state.h  persist-tool.c  persist-tool.h  state.c  state.h
scl/: CMakeLists.txt  Makefile.am  modules.conf  scl.conf  syslog-ng.conf
scripts/: CMakeLists.txt  Makefile.am  build-dbi.sh  build-python-venv.sh  make-and-check.sh  rm-extra-msg-sentinel.sh  style-checker.sh  syslog-ng-update-virtualenv.in  test-grep.sh  update-patterndb.in  version.sh
src/: .gitignore  Makefile.am  affile.c  affile.h  afinet.c  afinet.h  afinter.c  afinter.h  afprog.c  afprog.h  afsocket.c  afsocket.h  afsql.c  afsql.h  afstreams.c  afstreams.h  afunix.c  afunix.h  afuser.c  afuser.h  alarms.c  alarms.h  apphook.c  apphook.h  atomic.h  block-ref-grammar.ym  block-ref-parser.c  block-ref-parser.h  builtin-tmpl-func.c  center.c  center.h  cfg-grammar.c  cfg-grammar.h  cfg-grammar.y  cfg-lex.c  cfg-lex.l  cfg-lexer.c  cfg-lexer.h  cfg-parser.c  cfg-parser.h  (+118 more)
syslog-ng/: AUTHORS  CMakeLists.txt  COPYING  Makefile.am  README.md  alpine.dockerfile  autogen.sh  compiling_error.txt  configure.ac  control_client.h  control_client_posix.c  control_client_windows.c  dbghelp.h  dist.conf.in  main.c  minidump.c  minidump.h  sub-configure.sh  syslog-ng-agent-resource.rc  syslog-ng-ctl.c  syslog-ng.pc.cmake  winmain.c  winmain_agent.c  winservice.c  winservice.h  wrapper.c
syslog-ng-ctl/: CMakeLists.txt  Makefile.am  control-client-unix.c  control-client.c  control-client.h  control_client_posix.c  control_client_windows.c  syslog-ng-ctl.c
tests/: CMakeLists.txt  Makefile.am  build-log-cflags-propagation.sh  collect-cov.sh  smoke.sh  travis-common-script.sh
tools/: Makefile.am  logchksign.c
upgrade-tool/: Makefile.am  gpo_utils.c  gpo_utils.h  state_upgrade.c  state_upgrade.h  upgrade_log.c  upgrade_log.h  upgradetool.c
(+5630 files in other folders)
